# BennuGD

./: CMakeLists.txt
core/bgdi/src/: CMakeLists.txt  main.c
core/bgdrtm/src/: CMakeLists.txt  dirs.c  misc.c
core/include/: commons_defs.h  dirs.h  monolithic_includes.h
modules/libbgload/: bgload.c
modules/libblit/: CMakeLists.txt
modules/libdraw/: CMakeLists.txt
modules/libfont/: CMakeLists.txt
modules/libgrbase/: CMakeLists.txt
modules/libjoy/: CMakeLists.txt  libjoy.c  libjoy_symbols.h
modules/libkey/: CMakeLists.txt  libkey.c  libkey.h
modules/libmouse/: libmouse.c
modules/librender/: g_fade.h
modules/libsdlhandler/: libsdlhandler.c
modules/libvideo/: g_video.h
modules/libwm/: libwm.c
modules/mod_flic/: mod_flic.h
modules/mod_mem/: mod_mem.c
modules/mod_multi/: mod_multi.c
modules/mod_say/: mod_say.c
modules/mod_sound/: mod_sound.c
modules/mod_sys/: mod_sys.c
modules/mod_time/: mod_time.c
modules/mod_timers/: mod_timers.c
modules/mod_video/: mod_video.c
modules/mod_wm/: mod_wm.c
